--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   google_sign_in: ^6.3.0
   geolocator: ^11.0.0
   url_launcher: ^6.2.6
+  image_picker: ^1.0.7
+  http: ^1.2.1
+  geocoding: ^2.2.0
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
